fix alignment and interaction home hero

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ h4 {
     font-size: 2vw;
     line-height: 0.1;
     text-align: left;
+    color: #F7F6F3;
     /* padding-right:20%; */
 }
 
@@ -353,10 +354,12 @@ button:hover {
   }
 
 #homeHero {
-    height:100vh; 
+    height:85vh; 
     width: 100vw; 
     color:#333;
     margin-top: -5%;
+    margin-left: -13%;
+    position: relative;
 }
 
 #heroDescript {
@@ -366,9 +369,11 @@ button:hover {
     text-align: center; 
     margin-top: -4%;
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 1fr 0.5fr;
     gap: 0;
-    /* margin-left: 35%; */
+    margin-left: 35%;
+    position: relative;
+    font-size:calc(12px + 1.5vw);
 }
 
 /* images or icons */
@@ -530,17 +535,37 @@ button:hover {
  }
 
  .radial-gradient {
-    position: fixed;
+    position:relative;
     top:0px;
     left: 0;
-    height:100%;
+    height: 100%;
     width: 100%;
     
     /*Fallback if gradeints don't work */
-    background: rgb(114, 73, 147);
+    background: #D7C1E2;
     /*Linear gradient... */
     background: 
       radial-gradient(
-       at center, rgb(100, 127, 214), #724993
+       at center, rgb(100, 127, 214), #D7C1E2
       );
+}
+
+
+/* work on fade edge of hero transparent
+
+ol {
+    border: 1px #F7F6F3 dashed;
+    position: relative;
+    padding: 0;
+    margin:0;
   }
+  
+  ol:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, transparent, F7F6F3 90%);
+    width: 100%;
+    height: 100%;
+  } */
